--- a/.CaseToSolve/src/index.html
+++ b/.CaseToSolve/src/index.html
@@ -3,55 +3,175 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
+    /> -->
     <title>Unidad 2-Case to Solve</title>
     <style>
-      body {
-        margin: auto;
-      }
-      header {
-        display: flex;
-        justify-content: space-around;
+      h1 {
+        padding: 30px;
+        font-size: 40px;
+        text-align: center;
       }
 
       #container {
-        display: flex;
+        height: 900px;
+        justify-content: center;
+        display: grid;
+        grid-template-areas:
+          "fullApi fullApi"
+          "randomPhoto randomData"
+          "section section";
+        width: 95%;
+
+        padding: 20px;
+        margin: 10px;
       }
+      #container .wrapper-contenido-random {
+        grid-area: fullApi;
+      }
+      #container .wrapper-contenido-photo {
+        grid-area: randomPhoto;
+      }
+      #container .wrapper-contenido-random {
+        grid-area: randomData;
+      }
+      #container .wrapper-contenido-section {
+        grid-area: section;
+      }
+
       #contenido-info {
-        width: 350px;
+        margin-top: 30px;
         h2,
         h3,
         h4,
         p {
           font-size: 18px;
+          text-align: center;
         }
+        h2,
+        h3 {
+          text-align: center;
+        }
+      }
+      .icon-animate {
+        display: flex;
+        justify-content: center;
+      }
+
+      .icon-animate > button {
+        justify-content: center;
+        width: 200px;
+        height: 90px;
+        margin: 0;
+        display: flex;
+        align-items: center;
+      }
+      .icon-animate button > .gif {
+        display: none;
+        border-radius: 5px;
+      }
+      .icon-animate:hover button > .gif {
+        display: flex;
+      }
+      .icon-animate:hover button > .icon {
+        display: none;
+      }
+      .icon-animate button > .icon {
+        display: flex;
       }
     </style>
   </head>
   <body>
-    <header>
-      <div id="btn-container">
-        <button class="p-3 m-3 btn btn-primary" onclick="infoApi()">
-          Info API completa
-        </button>
-        <button class="p-3 m-3 btn btn-info" onclick="randomPhoto()">
-          Random photo API
-        </button>
-        <button class="p-3 m-3 btn btn-info" onclick="randomInfo()">
-          Random info API
-        </button>
-      </div>
-    </header>
+    <header></header>
     <main>
-      <div id="container" class="p-5 mt-5">
-        <div class="p-2" id="contenido-info"></div>
-        <div class="mt-5" id="contenido-photo"></div>
-        <div class="mt-5" id="contenido-random"></div>
+      <h1>Random API</h1>
+      <!-- dar estilo chulo con css -->
+
+      <div id="container">
+        <!-- contenedor full api -->
+        <div class="wrapper-contenido-info">
+          <div class="icon-animate">
+            <button class="p-3 m-3 btn btn-primary" onclick="infoApi()">
+              <img
+                class="icon"
+                src="./icons/icons8-lista-64.png"
+                alt="icon list"
+                title="icon list"
+              />
+              <img
+                class="gif"
+                src="./icons/icons8-lista.gif"
+                alt="gif list"
+                title="gif list"
+              />
+              Full API data
+            </button>
+          </div>
+
+          <div id="contenido-info"></div>
+        </div>
+
+        <!-- contenedor fotos -->
+
+        <div class="wrapper-contenido-photo">
+          <div class="icon-animate">
+            <button class="p-3 m-3 btn btn-info" onclick="randomPhoto()">
+              <img
+                class="icon"
+                src="./icons/icons8-pila-de-fotos-64.png"
+                alt="icon random photo"
+                title="icon random photo"
+              />
+              <img
+                class="gif"
+                src="./icons//icons8-pila-de-fotos.gif"
+                alt="gif random photo"
+                title="gif random photo"
+              />
+              Random photo API
+            </button>
+          </div>
+
+          <div id="contenido-photo"></div>
+        </div>
+
+        <!-- contenedor random info api -->
+
+        <div class="wrapper-contenido-random">
+          <div class="icon-animate">
+            <button class="p-3 m-3 btn btn-info" onclick="randomInfo()">
+              <img
+                class="icon"
+                src="./icons/icons8-opción-múltiple-50.png"
+                alt="icon random data"
+              />
+              <img
+                class="gif"
+                src="./icons/icons8-opción-múltiple.gif"
+                alt="gif random data"
+              />
+              Random data API
+            </button>
+          </div>
+
+          <div id="contenido-random"></div>
+        </div>
+        <div class="wrapper-contenido-section">
+          <span>
+            Choose from the options given and press the botton to be able to see
+            the data from the API</span
+          >
+          <select name="API" id="selector">
+            <option value="id">id</option>
+            <option value="idUser">idUser</option>
+            <option value="title">title</option>
+            <option value="body">body</option>
+          </select>
+        </div>
       </div>
     </main>
 
