--- a/.CaseToSolve/src/index.html
+++ b/.CaseToSolve/src/index.html
@@ -11,6 +11,9 @@
     /> -->
     <title>Unidad 2-Case to Solve</title>
     <style>
+      body {
+        background: grey;
+      }
       h1 {
         padding: 30px;
         font-size: 40px;
@@ -18,29 +21,76 @@
       }
 
       #container {
-        height: 900px;
+        height: 600px;
         justify-content: center;
         display: grid;
         grid-template-areas:
-          "fullApi fullApi"
-          "randomPhoto randomData"
-          "section section";
-        width: 95%;
+          "randomData . . fullApi"
+          "randomPhoto . . fullApi"
+          "section section . . ";
+        /* agregar mas si necesario al crear section */
 
+        grid-template-rows: 300px 600px 500px;
+        width: 100%;
         padding: 20px;
         margin: 10px;
       }
-      #container .wrapper-contenido-random {
+      #container .wrapper-contenido-info {
         grid-area: fullApi;
+        width: 500px;
+        justify-self: center;
       }
       #container .wrapper-contenido-photo {
         grid-area: randomPhoto;
+        .flex {
+          display: flex;
+          align-items: center;
+          min-height: 400px;
+        }
       }
       #container .wrapper-contenido-random {
         grid-area: randomData;
+        .flex {
+          display: flex;
+          align-items: center;
+          min-height: 300px;
+          max-width: 550px;
+          gap: 30px;
+        }
       }
       #container .wrapper-contenido-section {
         grid-area: section;
+        display: grid;
+        grid-template-columns: 200px 200px 50px 300px;
+        grid-template-rows: 100px 100px 100px;
+        grid-template-areas:
+          "spn spn . contenido"
+          ". select . contenido"
+          ". btn . contenido";
+
+        #span-selector {
+          grid-area: spn;
+          align-self: center;
+        }
+        #selector {
+          grid-area: select;
+          select {
+            width: 100px;
+            padding: 5px;
+          }
+        }
+
+        #btn-selector {
+          grid-area: btn;
+          button {
+            padding: 10px;
+            width: 100px;
+          }
+        }
+
+        #div-selector {
+          grid-area: contenido;
+        }
       }
 
       #contenido-info {
@@ -50,11 +100,6 @@
         h4,
         p {
           font-size: 18px;
-          text-align: center;
-        }
-        h2,
-        h3 {
-          text-align: center;
         }
       }
       .icon-animate {
@@ -95,7 +140,7 @@
         <!-- contenedor full api -->
         <div class="wrapper-contenido-info">
           <div class="icon-animate">
-            <button class="p-3 m-3 btn btn-primary" onclick="infoApi()">
+            <button onclick="infoApi()">
               <img
                 class="icon"
                 src="./icons/icons8-lista-64.png"
@@ -118,59 +163,67 @@
         <!-- contenedor fotos -->
 
         <div class="wrapper-contenido-photo">
-          <div class="icon-animate">
-            <button class="p-3 m-3 btn btn-info" onclick="randomPhoto()">
-              <img
-                class="icon"
-                src="./icons/icons8-pila-de-fotos-64.png"
-                alt="icon random photo"
-                title="icon random photo"
-              />
-              <img
-                class="gif"
-                src="./icons//icons8-pila-de-fotos.gif"
-                alt="gif random photo"
-                title="gif random photo"
-              />
-              Random photo API
-            </button>
-          </div>
+          <div class="flex">
+            <div class="icon-animate">
+              <button onclick="randomPhoto()">
+                <img
+                  class="icon"
+                  src="./icons/icons8-pila-de-fotos-64.png"
+                  alt="icon random photo"
+                  title="icon random photo"
+                />
+                <img
+                  class="gif"
+                  src="./icons//icons8-pila-de-fotos.gif"
+                  alt="gif random photo"
+                  title="gif random photo"
+                />
+                Random photo API
+              </button>
+            </div>
 
-          <div id="contenido-photo"></div>
+            <div id="contenido-photo"></div>
+          </div>
         </div>
 
         <!-- contenedor random info api -->
 
         <div class="wrapper-contenido-random">
-          <div class="icon-animate">
-            <button class="p-3 m-3 btn btn-info" onclick="randomInfo()">
-              <img
-                class="icon"
-                src="./icons/icons8-opción-múltiple-50.png"
-                alt="icon random data"
-              />
-              <img
-                class="gif"
-                src="./icons/icons8-opción-múltiple.gif"
-                alt="gif random data"
-              />
-              Random data API
-            </button>
-          </div>
+          <div class="flex">
+            <div class="icon-animate">
+              <button onclick="randomInfo()">
+                <img
+                  class="icon"
+                  src="./icons/icons8-opción-múltiple-50.png"
+                  alt="icon random data"
+                />
+                <img
+                  class="gif"
+                  src="./icons/icons8-opción-múltiple.gif"
+                  alt="gif random data"
+                />
+                Random data API
+              </button>
+            </div>
 
-          <div id="contenido-random"></div>
+            <div id="contenido-random"></div>
+          </div>
         </div>
         <div class="wrapper-contenido-section">
-          <span>
+          <span id="span-selector">
             Choose from the options given and press the botton to be able to see
             the data from the API</span
           >
-          <select name="API" id="selector">
-            <option value="id">id</option>
-            <option value="idUser">idUser</option>
-            <option value="title">title</option>
-            <option value="body">body</option>
-          </select>
+          <div>
+            <select name="API" id="selector" onchange="seleccion(event)">
+              <option class="opcion" value="userId">userId</option>
+              <option class="opcion" value="id">id</option>
+              <option class="opcion" value="title">title</option>
+              <option class="opcion" value="body">body</option>
+            </select>
+          </div>
+          <div id="btn-selector"></div>
+          <div class="contenido-selector" id="div-selector"></div>
         </div>
       </div>
     </main>
