--- a/.CaseToSolve/src/index.html
+++ b/.CaseToSolve/src/index.html
@@ -117,6 +117,7 @@
             the data from the API</span
           >
           <div class="wrapper-selector">
+            <!-- Asignacion de evento onchange="funcion(parametro)"-->
             <select name="API" id="selector" onchange="seleccion(event)">
               <option class="opcion" value="userId">userId</option>
               <option class="opcion" value="id">id</option>
