--- a/.CaseToSolve/src/index.html
+++ b/.CaseToSolve/src/index.html
@@ -3,16 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Coustard:wght@400;900&family=Manrope:wght@200..800&family=MedievalSharp&family=Rubik+Scribble&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Coustard:wght@400;900&family=Manrope:wght@200..800&family=MedievalSharp&family=Press+Start+2P&family=Rubik+Scribble&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="apistyle.css" />
@@ -20,17 +14,14 @@
   </head>
   <body>
     <header>
-      <!-- boton full APi -->
-
-      <!-- boton random photo -->
-
-      <!-- boton random info -->
+      <h1>RANDOM API ROOM</h1>
     </header>
     <main>
-      <h1>Random API</h1>
-      <!-- dar estilo chulo con css -->
-
-      <!-- contenedor full api -->
+      <img
+        class="background"
+        src="./img/background-retro.jpeg"
+        alt="Fondo retro con servidores web, nubes, flechas y de color negro, azul y rosa."
+      />
       <div id="container">
         <div class="box-info">
           <div class="icon-animate">
@@ -87,7 +78,7 @@
         <!-- contenedor random info api -->
 
         <div class="wrapper-contenido-random">
-          <div class="icon-animate">
+          <div class="icon-animate border-boton">
             <button onclick="randomInfo()">
               <img
                 class="icon"
@@ -107,13 +98,12 @@
 
         <div class="wrapper-contenido-section">
           <div id="text-selector">
-            CHOOSE FROM EACH KEY TOBE ABLE TO SEE THE VALUE TO ALL OF THEM
-            <br />
+            <h2>SELECT A KEY FROM THE API TO SEE ALL OF ITS VALUE</h2>
             <img src="./key-value.png" alt="img key:value" />
           </div>
-          <div class="wrapper-selector">
+          <div class="wrapper-selector" id="selector">
             <!-- Asignacion de evento onchange="funcion(parametro)"-->
-            <select name="API" id="selector" onchange="seleccion(event)">
+            <select name="API" onchange="seleccion(event)">
               <option class="opcion" value="userId">select one</option>
               <option class="opcion" value="userId">userId</option>
               <option class="opcion" value="id">id</option>
